@@ -1559,6 +1559,9 @@ typedef struct job_info {
 				 * start_range_2, .., -1  */
 	uint32_t exit_code;	/* exit code for job (status from wait call) */
 	char *features;		/* comma separated list of required features */
+	char *fed_origin_str;	/* Origin cluster's name */
+	uint64_t fed_siblings;	/* bitmap of sibling cluster ids */
+	char *fed_siblings_str;	/* string of sibling cluster names */
 	char *gres;		/* comma separated list of generic resources */
 	uint32_t group_id;	/* group job submitted as */
 	uint32_t job_id;	/* job ID */
