@@ -88,6 +88,8 @@ In slurm_ctl_conf: Added mail_domain.
 In slurm_msg_t: Added buffer to keep received message buffer to use for later
 		      purposes.
 In job_desc_msg_t: Added fed_siblings to track which clusters have sibling jobs.
+In slurm_job_info_t: Added fed_origin_str, fed_siblings, fed_siblings_str to
+		      display job federation information.
 
 Added the following struct definitions
 ======================================
